give a name from array

--- a/sinatra-intro/views/index.erb
+++ b/sinatra-intro/views/index.erb
@@ -1,4 +1,7 @@
-  
-  <div style='border: 5px solid black'>
+
+    <h1>My name is  <%= %w(Amigo Misty Almond).sample %></h1>
+ 
+    <div style='border: 5px solid black'>
     <img src='http://placekitten.com/500/500'>
   </div>
+
