--- a/sinatra-intro/views/index.erb
+++ b/sinatra-intro/views/index.erb
@@ -1,7 +1,13 @@
 
-    <h1>My name is  <%= @name %></h1>
- 
-    <div style='border: 5px solid black'>
-    <img src='http://placekitten.com/500/500'>
-  </div>
+<% if @name  %>
+<h1>My name is <%= @name %></h1>
+<% end %>
+<form action="/named-cat">
+  <input type="text" name="name">
+  <input type="submit" value="Submit">
+</form>
+
+<div style='border: 5px solid black'>
+  <img src='http://placekitten.com/500/500'>
+</div>
 
